--- a/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.html
+++ b/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.html
@@ -4,8 +4,8 @@
         <!-- <div class="col-md-6"> -->
             <div class="col-md-3" *ngFor="let product of products2 | paginate: { itemsPerPage: itemsPerPage, currentPage: p }">
                 <div class="product-wrapper mb-45 text-center" >
-                    <div class="product-img"> <a href="#" data-abc="true"> <img src="https://i.imgur.com/tL7ZE46.jpg"
-                        alt=""> </a> <span class="text-center"><i class="fa fa-doller"></i> ${{product.product_discount_price}}</span>
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src={{product.image}}
+                        alt="{{product.product_name}}" width="270" height="326"></a> <span class="text-center"><i class="fa fa-doller"></i> ${{product.product_discount_price}}</span>
                         <div class="product-action">
                             <div class="product-action-style"> <a href="#"> <i class="fa fa-plus"></i> </a> <a href="#">
                                     <i class="fa fa-heart"></i> </a> <a href="#"> <i class="fa fa-shopping-cart"></i>
@@ -18,19 +18,14 @@
         <!-- </div> -->
     </div>
 </div>
-<div class="mt-8 py-5 flex justify-center items-center">
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
-</div>
-
-
 <h2>Popular <b>Products</b></h2>
 <div class="container d-flex justify-content-left mt-100">
     <div class="row">
         <!-- <div class="col-md-6"> -->
             <div class="col-md-3" *ngFor="let item of products | paginate: { itemsPerPage: itemsPerPage, currentPage: p }">
                 <div class="product-wrapper mb-45 text-center" >
-                    <div class="product-img"> <a href="#" data-abc="true"> <img src="https://i.imgur.com/tL7ZE46.jpg"
-                                alt=""> </a> <span class="text-center"><i class="fa fa-doller"></i> ${{item.product_discount_price}}</span>
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src={{item.image}}
+                                alt="" width="270" height="326"> </a> <span class="text-center"><i class="fa fa-doller"></i> ${{item.product_discount_price}}</span>
                         <div class="product-action">
                             <div class="product-action-style"> <a href="#"> <i class="fa fa-plus"></i> </a> <a href="#">
                                     <i class="fa fa-heart"></i> </a> <a href="#"> <i class="fa fa-shopping-cart"></i>
