Made some Changes on Product List Page and Model page. Background color have been set globally. Brand property have been added. And some changes have been made on list ui.

--- a/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.css
+++ b/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.css
@@ -1,10 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
 body {
-	vertical-align: middle;
-	display: flex;
-	font-family: 'Calibri', sans-serif !important;
-	background-color: #eee
+	/* vertical-align: middle; */
+	/* display: flex; */
+	/* font-family: 'Calibri', sans-serif !important; */
+	/* background-color: #F6F4EB  */
 }
 h2 {
 	color: #000;
@@ -15,6 +15,7 @@ h2 {
 	position: relative;
 	margin: 30px 0 60px;
 }
+
 h2::after {
 	content: "";
 	width: 100px;
@@ -27,6 +28,7 @@ h2::after {
 	right: 0;
 	bottom: -20px;
 }
+
 .mt-100 {
 	margin-top: 100px
 }
@@ -55,7 +57,7 @@ h2::after {
 	border-radius: 10px
 }
 
-.product-img>span {
+.product-img span {
 	background-color: #fff;
 	box-shadow: 0 0 8px 1.7px rgba(0, 0, 0, 0.06);
 	color: #333;
@@ -68,28 +70,88 @@ h2::after {
 	position: absolute;
 	text-align: center;
 	text-transform: uppercase;
-	top: 20px
+	top: 20px;
+	/* justify-content: space-between; */
 }
 
-.product-action-style {
-	background-color: #fff;
-	box-shadow: 0 0 8px 1.7px rgba(0, 0, 0, 0.06);
-	display: inline-block;
-	padding: 16px 2px 12px
+.product-img del {
+	color: #333;
 }
 
-.product-action-style>a {
-	color: #979797;
-	line-height: 1;
-	padding: 0 21px;
-	position: relative
+.product-img b {
+	color: #7ac400;
 }
 
-.product-action-style>a.action-plus {
-	font-size: 18px
+.product-action-style button {
+	background: #4682A9;
+	color: #fff;
+	border: none;
+	position: relative;
+	height: 25px;
+	font-size: 12px;
+	padding: 0 2em;
+	cursor: pointer;
+	transition: 800ms ease all;
+	outline: none;
 }
+
+.product-action-style button:hover {
+	background: #fff;
+	color: #1AAB8A;
+}
+
+.product-action-style button:before,
+button:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 1px;
+	width: 0;
+	background: #1AAB8A;
+	transition: 400ms ease all;
+}
+
+.product-action-style button:after {
+	right: inherit;
+	top: inherit;
+	left: 0;
+	bottom: 0;
+}
+
+.product-action-style button:hover:before,
+button:hover:after {
+	width: 100%;
+	transition: 800ms ease all;
+}
+
+.product-box {
+	border: 1px solid #ddd;
+	/* Add a border around the box */
+	padding: 10px;
+	/* Add some padding inside the box */
+	background-color: #f5f5f5;
+	/* Set a background color for the box */
+	border-radius: 5px;
+	/* Add rounded corners to the box */
+}
+
+.product-name {
+	font-size: 18px;
+	/* Adjust the font size as needed */
+	font-weight: bold;
+	/* Apply bold font weight */
+	color: #333;
+	/* Set the text color */
+}
+
 
 .product-wrapper:hover .product-action {
 	bottom: 20px;
 	opacity: 1
+}
+.pagination{
+	/* mt-8 py-5 flex justify-center items-center */
+	display: flex;
+	justify-content: center;
 }
