Home Pae integrated with backend and some other pages are merged with backend.

--- a/product-webapp/webapp/src/app/Components/header/header.component.css
+++ b/product-webapp/webapp/src/app/Components/header/header.component.css
@@ -23,10 +23,11 @@
     border-radius: 0.5%;
   }
   
-  .nav-links a {
+  .nav a {
     color: #fff;
+    display: inline;
     text-decoration: none;
-    margin-right: 1rem;
+    margin-right: 1px;
   }
   
   .phone-number {
