--- a/product-webapp/webapp/src/app/Components/header/header.component.html
+++ b/product-webapp/webapp/src/app/Components/header/header.component.html
@@ -1,14 +1,11 @@
 <header class="header">
     <div class="logo">
       <img src="../../assets/Logo.jpeg" alt="Logo">
+      <a routerLink="/"></a>
     </div>
-    <nav class="nav-links">
-      <a href="#">Electronics</a>
-      <a href="#">Home Appliances</a>
-      <a href="#">Furniture</a>
-      <a href="#">Shoes</a>
-      <a href="#">Accessories</a>
-    </nav>
+    <div class="nav" *ngFor="let item of allCategories">
+      <a routerLink="/view_products/{{item}}">{{item}}</a>
+    </div>
   
     <div>
       <form class="example-form">
