--- a/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
+++ b/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
@@ -62,60 +62,20 @@
           <div class="card-body">
             <h5 class="card-title">Similar items</h5>
             <div class="row">
-              <div class="col-md-6 mb-3">
+              <div class="col-md-6 mb-3" *ngFor="let item of similarProducts">
                 <div class="d-flex">
                   <a href="#" class="me-3">
-                    <img src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/8.webp"
+                    <img [src]="'data:image/jpeg;base64,' + item.product_image"
                       style="min-width: 96px; height: 96px;" class="img-md img-thumbnail">
                   </a>
                   <div class="info">
-                    <a href="#" class="nav-link mb-1">
-                      Rucksack Backpack Large <br>
-                      Line Mounts
+                    <a routerLink="'/details/{{item.product_id}}" class="nav-link mb-1">
+                      {{item.product_name}}
                     </a>
-                    <strong class="text-dark"> $38.90</strong>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6 mb-3">
-                <div class="d-flex">
-                  <a href="#" class="me-3">
-                    <img src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/9.webp"
-                      style="min-width: 96px; height: 96px;" class="img-md img-thumbnail">
-                  </a>
-                  <div class="info">
-                    <a href="#" class="nav-link mb-1">
-                      Summer New Men's Denim <br>
-                      Jeans Shorts
-                    </a>
-                    <strong class="text-dark"> $29.50</strong>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6 mb-3">
-                <div class="d-flex">
-                  <a href="#" class="me-3">
-                    <img src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/10.webp"
-                      style="min-width: 96px; height: 96px;" class="img-md img-thumbnail">
-                  </a>
-                  <div class="info">
-                    <a href="#" class="nav-link mb-1"> T-shirts with multiple colors, for men and lady </a>
-                    <strong class="text-dark"> $120.00</strong>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-6 mb-3">
-                <div class="d-flex">
-                  <a href="#" class="me-3">
-                    <img src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/11.webp"
-                      style="min-width: 96px; height: 96px;" class="img-md img-thumbnail">
-                  </a>
-                  <div class="info">
-                    <a href="#" class="nav-link mb-1"> Blazer Suit Dress Jacket for Men, Blue color </a>
-                    <strong class="text-dark"> $339.90</strong>
+                    <strong class="text-dark"> <span><i
+                      class="fa fa-doller"></i> <del>${{item.product_current_price}}</del> <b>
+                      ${{item.product_discount_price}}</b>
+                    </span></strong>
                   </div>
                 </div>
               </div>
