Added Search By category in the backend.

--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
@@ -25,7 +25,7 @@
                                                 </ul>
                                             </div>
                                             <p class="item-price"><del>${{item.product_current_price}}</del> <b> ${{item.product_discount_price}}</b></p>
-                                            <a routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</a>
+                                            <!-- <a routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</a> -->
                                         </div>
                                     </div>
                                 </div>
