--- a/product-webapp/webapp/src/app/Components/cart-page/cart-page.component.html
+++ b/product-webapp/webapp/src/app/Components/cart-page/cart-page.component.html
@@ -6,14 +6,14 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
-<div class="container cart-page-header">
+<!-- <div class="container cart-page-header">
   <div class="header-content">
     <div class="logo">
       <img src="assets\Shop Smartly Logo Symbol 2400x1800.jpg" alt="Logo" />
     </div>
     <h1 class="h2">SmartCart</h1>
   </div>
-</div>
+</div> -->
 
 <div class="container cart-box-main">
   <div class="row">
