--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
@@ -1,8 +1,8 @@
-    <body>
+<body>
     <div class="container-xl">
         <div class="row">
             <div class="col-md-12">
-                <h2><b>{{categoryValue}}</b></h2>
+                <h2><b>Products</b></h2>
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
                     <div class="carousel-inner">
                         <div class="item carousel-item active">
@@ -24,8 +24,8 @@
                                                     <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
                                                 </ul>
                                             </div>
-                                            <p class="item-price"><del>${{item.product_current_price}}</del> <b> ${{item.product_discount_price}}</b></p>
-                                            <!-- <a routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</a> -->
+                                            <p class="item-price"><del>{{item.product_current_price}}</del> <b>{{item.product_discount_price}}</b></p>
+                                            <button routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</button>
                                         </div>
                                     </div>
                                 </div>
