--- a/product-webapp/webapp/src/app/Components/viewbybrand/viewbybrand.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbybrand/viewbybrand.component.html
@@ -7,7 +7,7 @@
                     <div class="carousel-inner">
                         <div class="item carousel-item active">
                             <div class="row">
-                                <div class="col-sm-3" *ngFor="let item of similarProducts">
+                                <div class="col-sm-3" *ngFor="let item of similarBrandProducts">
                                     <div class="thumb-wrapper">
                                         <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
                                         <div class="img-box">
@@ -24,7 +24,7 @@
                                                     <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
                                                 </ul>
                                             </div>
-                                            <p class="item-price"><del>{{item.product_current_price}}</del> <b>{{item.product_discount_price}}</b></p>
+                                            <p class="item-price"><del>${{item.product_current_price}}</del> <b> ${{item.product_discount_price}}</b></p>
                                             <button routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</button>
                                         </div>
                                     </div>
