make some changes in the footer and the home page top carousel

--- a/product-webapp/webapp/src/app/Components/home/home.component.html
+++ b/product-webapp/webapp/src/app/Components/home/home.component.html
@@ -12,34 +12,37 @@
     <ngb-carousel>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper top-carousel">
-          <h1 style="padding-top: 1%;">Welcome to Shop Smartly</h1>
-          <div style="padding-bottom: 3%;">
-            <h3>Enjoy Great Deals at Your Fingertips</h3>
-          </div>
+          <p style="padding: 1% 0; font-size: xx-large;">Welcome to Shop Smartly !!</p>
+          <h3 style="padding: 1% 0;">Discover Deals, Delight, and Distinction at Shop Smartly !!</h3>
+          <h3 style="padding-bottom: 2%;">Enjoy Great Deals at Your Fingertips</h3>
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper top-carousel">
-          <h1 style="padding-top: 1%;">Buy 1 Get 1 Free on Apparels !!</h1>
-          <h3 style="padding-bottom: 3%;">only for today</h3>
+          <p style="padding: 1% 0; font-size: xx-large;">Limited Time Offer: Buy One Mobile Accessory, Get One FREE !!</p>
+          <h3 style="padding: 1% 0;">Discover the Joy of Double Delights with Our Irresistible BOGO Deal !!</h3>
+          <h3 style="padding-bottom: 2%;">Only for Today, Grab Your Deals Now !!</h3>
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper top-carousel">
-          <h1 style="padding-top: 1%;">Upto 20% Off on all Home Appliances</h1>
-          <h3 style="padding-bottom: 3%;">Use the code HOMEAPPL20</h3>
+          <p style="padding: 1% 0; font-size: xx-large;">Enjoy 20% Off on Home Appliances - Upgrade Your Space Today !!</p>
+          <h3 style="padding: 1% 0;">Revamp Your Home with our Exclusive Appliance Discounts !!</h3>
+          <h3 style="padding-bottom: 2%;">Use Code HOMEAPPL20</h3>
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper top-carousel">
-          <h1 style="padding-top: 1%;">Special Offers for our Diamond Members</h1>
-          <h3 style="padding-bottom: 3%;">from 12th to 20th August</h3>
+          <p style="padding: 1% 0; font-size: xx-large;"> Exclusive Diamond Members Offer, Your VIP Access to Unprecedented Benefits !! </p>
+          <h3 style="padding: 1% 0;">Unlock a World of Luxury with Our Elite Diamond Membership !!</h3>
+          <h3 style="padding-bottom: 2%;">From 12th to 20th August</h3>
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper top-carousel">
-          <h1 style="padding-top: 1%;">Back to School Offer !!</h1>
-          <h3 style="padding-bottom: 3%;">Avail right now !!</h3>
+          <p style="padding: 1% 0; font-size: xx-large;">Back to School Tech Bonanza – Score Big Savings on Laptops and Tablets !!</p>
+          <h3 style="padding: 1% 0;">Get Ready to Excel with Our Exclusive Student Offer !!</h3>
+          <h3 style="padding-bottom: 2%;">Avail Right Now !!</h3>
         </div>
       </ng-template>
     </ngb-carousel>
