--- a/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.html
+++ b/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.html
@@ -1,6 +1,6 @@
 <body>
 <h2><b>Products</b></h2>
-<div class="container d-flex justify-content-left mt-100">
+<div class="container d-flex justify-content-center mt-100">
     <div class="row">
         <!-- <div class="col-md-6"> -->
         <div class="col-md-3"
