--- a/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.css
+++ b/product-webapp/webapp/src/app/Components/product-lists/product-lists.component.css
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
 body {
-	/* vertical-align: middle; */
+	vertical-align: middle;
 	/* display: flex; */
-	/* font-family: 'Calibri', sans-serif !important; */
+	/* font-family: 'Calibri', sans-serif !important;
 	/* background-color: #F6F4EB  */
 }
 h2 {
