--- a/product-webapp/webapp/src/app/Components/cart-page/cart-page.component.html
+++ b/product-webapp/webapp/src/app/Components/cart-page/cart-page.component.html
@@ -24,28 +24,28 @@
             <tr *ngFor="let cartItem of cartList">
               <td class="thumbnail-img">
                 <a href="#">
-                  <img class="img-fluid" [src]="cartItem.CartImage" alt="" />
+                  <img class="img-fluid" [src]="'data:image/jpeg;base64,' + cartItem.productImage" style="min-width: 96px; height: 96px" alt="" />
                 </a>
               </td>
               <td class="name-pr">
-                <p>{{ cartItem.ProductId }}</p>
+                <p>{{ cartItem.productName }}</p>
               </td>
               <td class="price-pr">
-                <p>{{ '$' + cartItem.ProductPrice }}</p>
+                <p>{{ '$' + cartItem.productPrice }}</p>
               </td>
               <td class="quantity-box">
                 <!-- Quantity input -->
                 <mat-form-field>
-                  <input matInput type="number" name="quantity" [(ngModel)]="cartItem.ProductQuantity" size="4" min="0"
+                  <input matInput type="number" name="quantity" [(ngModel)]="cartItem.productQuantity" size="4" min="0"
                     step="1" class="c-input-text qty text" />
                 </mat-form-field>
               </td>
               <td class="total-pr">
-                <p>{{ '$' + cartItem.CartTotalPrice }}</p>
+                <p>{{ '$' + cartItem.cartTotalPrice * cartItem.productQuantity}}</p>
               </td>
               <td>
                 <!-- Delete button -->
-                <button mat-button (click)="deleteCartItem(cartItem)" title="Delete" class="btn btn-danger">
+                <button mat-button (click)="deleteCartItem(cartItem.productId)" title="Delete" class="btn btn-danger">
                   Delete
                 </button>
               </td>
@@ -101,15 +101,6 @@
     </div>
   </div>
 </div>
-<div class="d-flex justify-content-center mt-3">
-  <button (click)="payNow()" class="btn btn-primary btn-green">
-    <a mat-button color="primary" class="d-flex align-items-center justify-content-center" routerLink="/checkout">
-      <i class="bi bi-cart-fill me-1"></i>
-      Proceed to Checkout
-    </a>
-  </button>
-</div>
-
 
 <!-- Include SweetAlert library -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
