--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
@@ -24,7 +24,7 @@
                                                     <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
                                                 </ul>
                                             </div>
-                                            <p class="item-price"><del>{{item.product_current_price}}</del> <b>{{item.product_discount_price}}</b></p>
+                                            <p class="item-price"><del> ${{item.product_current_price}}</del> <b> ${{item.product_discount_price}}</b></p>
                                             <button routerLink="/details/{{item.product_id}}" class="btn btn-primary">Add to Cart</button>
                                         </div>
                                     </div>
